<?xml version="1.0" encoding="utf-8"?>
<com.stepstone.stepper.StepperLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stepperLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:ms_stepperType="dots"
    app:ms_showBackButtonOnFirstStep="true"
    tools:showIn="@layout/activity_main"
    />
