<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ActivityJournal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="timeline">Timeline</string>
    <string name="add_activity_step_title" tools:ignore="TypographyFractions">Add activity 1/2</string>
    <string name="title_input_hint_text">What are you up to?</string>
    <string name="add_activity_step_time">Add activity 2/2</string>
    <string name="add_activity_finish_button">Add activity</string>
    <string name="time_input_hint">Starting time or empty for now.</string>
    <string name="date_input_hint">Date or empty for today.</string>
    <string name="add_activity_default_title">No title provided</string>
    <string name="duration_input_hint">Duration in minutes.</string>
    <string name="duration_input_helper">Enter duration for past activity or leave empty to start tracking.</string>
    <string name="activity_undergoing">Undergoing</string>
    <string name="start_tracking_finish_button">Start tracking</string>
    <string name="activity_finish_button">Finish</string>
    <string name="err_empty_title">Emtpty title</string>
</resources>
